added logic for the given task

--- a/PropertySearch.API/appsettings.Development.json
+++ b/PropertySearch.API/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=192.168.1.202;Port=5432;Database=PropertySearch;Username=sa;Password=knwdEfM8A3dN2iM"
   }
 }
