--- a/PropertySearch.API/appsettings.json
+++ b/PropertySearch.API/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+    "ConnectionStrings": {
+      "DefaultConnection": "Host=192.168.1.202;Port=5432;Database=PropertySearch;Username=sa;Password=knwdEfM8A3dN2iM"
+    }
+
 }
